# vocaloidsongoftheday

./: .gitignore  README.md  blueauth.py  config.ini  main.py  pyproject.toml  text_templates.json  twitterauth.py  vocadb_wrapper.py  webhook.py
.github/workflows/: main.yml
tests/: test_blueauth.py  test_main.py  test_twitterauth.py  test_vocadb_wrapper.py
