[project]
name = "vocaloidsongoftheday"
version = "0.1.0"
description = "A bot that posts a vocaloid song every day on Twitter."
requires-python = ">=3.13"
dependencies = [
    "atproto==0.0.65",
    "loguru>=0.7.3",
    "python-dotenv==1.2.2",
    "requests>=2.33.0",
    "tweepy>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
